<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/id_activity_ticket_background"
        android:paddingHorizontal="72dp"
        tools:context=".ui.TicketActivity">
    <include
            android:id="@+id/id_activity_ticket_toolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/string_activity_ticket_default_time"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/id_activity_ticket_time_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/id_activity_ticket_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_activity_ticket_pulse_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/id_activity_ticket_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/id_activity_ticket_image_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_button_light"
                    android:layout_width="90dp"
                    android:layout_height="90dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/id_activity_ticket_ticket_buy_ticket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="90dp"
                    android:layout_height="90dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_buy"
                        android:textColor="@color/text_white"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:id="@+id/id_activity_ticket_loading_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="90dp"
                    android:layout_height="90dp">

                <ImageView
                        android:src="@drawable/ic_three_dots"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:id="@+id/id_activity_ticket_show_ticket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="90dp"
                    android:layout_height="90dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_activity_ticket_ticket_to_show"
                        android:textColor="@color/text_white"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
                android:id="@+id/id_activity_ticket_primary_pulse"
                android:src="@drawable/ic_pulse_signal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="144dp"
                android:layout_height="144dp"/>

        <ImageView
                android:visibility="invisible"
                android:id="@+id/id_activity_ticket_secondary_pulse"
                android:src="@drawable/ic_pulse_signal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="176dp"
                android:layout_height="176dp" />

    <ImageView
                android:visibility="invisible"
                android:id="@+id/id_activity_ticket_background_pulse"
                android:src="@drawable/ic_pulse_signal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="212dp"
                android:layout_height="212dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/id_activity_ticket_linear_layout">
        <TextView
                android:textAlignment="center"
                android:id="@+id/id_activity_ticket_sms_title"
                android:textSize="16sp"
                android:text="@string/ticket_sms_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/id_activity_ticket_sms_price"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/ticket_sms_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
            android:id="@+id/id_activity_ticket_history_button"
            android:visibility="gone"
            android:src="@drawable/ic_history"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_activity_ticket_pulse_animation"
            android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>